refactor: restructure project and improve styling
- Move core rendering logic from app.js to index.js
- Update index.html to reference app.js instead of Main.js
- Enhance CSS with variables and responsive layout
- Simplify app.js to focus on UI composition

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script type="text/babel" data-type="module" src="Main.js"></script>
+    <script type="text/babel" data-type="module" src="app.js"></script>
 </body>
 
 </html>
